# kokoriko

./: README.md  birds.xml  configure.ac  datapoints.py  generateSamples.py  shrc  sourceFolds.m
1-pass/: afile.mono.wav.highpass.mat  filter.mat  highPassFilter.m  plotFrequencies.m  songToMono20.sh  songsToMono20.sh  wavToHuman.m  wavToHuman.sh
2-pass/: afile.specgram.mat  mono20ToSpectrogram.py  spectrogramToHuman.m  spectrogramToHuman.py
birds/: medianFilter.m  preemphasisFilter.m
